<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".views.ResultsFragment">

    <LinearLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/custom_toolbar" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xmlarge"
        android:layout_marginTop="@dimen/spacing_xxmlarge"
        android:layout_marginEnd="@dimen/spacing_xmlarge"
        android:background="@drawable/card_gradient"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xmlarge"
            app:dividerColor="@color/divider_color" />


        <TextView
            android:id="@+id/BMI_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="@dimen/spacing_small"
            android:fontFamily="@font/raleway"
            android:text="@string/body_mass_index"
            android:textColor="@color/divider_color"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="normal" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/divider_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spacing_xxxmlarge"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="@dimen/spacing_xxxlarge"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/BMI_result_whole_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xlarge"
                android:textStyle="normal"
                tools:text="@string/eighteen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:fontFamily="@font/poppins"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xmlarge"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/BMI_result_rem_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xxmlarge"
                android:textStyle="normal"
                tools:text="@string/sixty_four" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xxxmlarge"
            android:layout_marginEnd="@dimen/spacing_xxxmlarge"
            app:dividerColor="@color/white" />

        <TextView
            android:id="@+id/txt_vw_name_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="@dimen/spacing_xxxlarge"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xsmall"
            android:textStyle="bold"
            tools:text="@string/greetings" />

        <TextView
            android:id="@+id/txt_vw_BMI_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="@dimen/spacing_middle"
            android:fontFamily="@font/raleway"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xsmall"
            android:textStyle="normal"
            tools:text="@string/bmi_range" />

        <TextView
            android:id="@+id/txt_vw_ponderal_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="@dimen/spacing_xmedium"
            android:fontFamily="@font/raleway"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xsmall"
            android:textStyle="normal"
            tools:text="@string/ponderal_index" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="@dimen/spacing_xmlarge"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_horizontal"
                android:fontFamily="@font/raleway"
                android:paddingStart="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_middle"
                android:paddingEnd="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_middle"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:cornerRadius="@dimen/spacing_xmedium"
                app:icon="@drawable/share"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/spacing_medium"
                app:iconSize="@dimen/spacing_mxlarge"
                app:iconTint="@null"
                app:strokeColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rate_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_horizontal"
                android:layout_marginStart="@dimen/spacing_xmlarge"
                android:fontFamily="@font/raleway"
                android:paddingStart="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_middle"
                android:paddingEnd="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_middle"
                android:text="@string/rate"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:cornerRadius="@dimen/spacing_xmedium"
                app:icon="@drawable/star"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/spacing_medium"
                app:iconSize="@dimen/spacing_mxlarge"
                app:iconTint="@null"
                app:strokeColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/native_ad"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ad_banner_height"
        android:layout_marginStart="@dimen/spacing_xmedium"
        android:layout_marginTop="@dimen/spacing_xmedium"
        android:layout_marginEnd="@dimen/spacing_xmedium"
        android:layout_marginBottom="@dimen/spacing_mxlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>