<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        >
        <include layout="@layout/custom_toolbar"/>
    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/raleway"
        android:text="@string/enter_personal_details"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corner_edit_text"
        android:fontFamily="@font/raleway"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        android:textColor="@color/faint_txt_color"
        android:textColorHint="@color/faint_txt_color"
        android:textSize="22sp"
        android:textStyle="normal" />


    <TextView
        android:id="@+id/cal_txtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins"
        android:text="@string/calculate_your_body_mass_index"
        android:textColor="@color/faint_txt_color"
        android:textSize="22sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weight_txt_vw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginStart="56dp"
            android:fontFamily="@font/poppins"
            android:text="@string/weight"
            android:textColor="@color/num_picker_header_colors"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/height_txt_vw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"

            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins"
            android:text="@string/gender"
            android:textColor="@color/num_picker_header_colors"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/gender_txt_vw"
            app:layout_constraintEnd_toEndOf="@+id/numberpickers"
            app:layout_constraintTop_toTopOf="@+id/gender_txt_vw"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/gender_txt_vw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_gravity="end|center_horizontal"
            android:fontFamily="@font/poppins"
            android:text="@string/height"
            android:textColor="@color/num_picker_header_colors"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/weight_txt_vw"
            app:layout_constraintEnd_toStartOf="@+id/height_txt_vw"
            app:layout_constraintStart_toEndOf="@+id/weight_txt_vw"
            app:layout_constraintTop_toTopOf="@+id/weight_txt_vw"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/numberpickers"
        android:layout_width="389dp"
        android:layout_height="198dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_txt_vw">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp">

            <NumberPicker
                android:id="@+id/numberPicker_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:theme="@style/NumberPickerTheme" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_weight"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="20dp"
                android:foregroundGravity="center"
                app:dividerColor="@color/text_color"
                app:dividerInsetEnd="16dp"
                app:dividerInsetStart="16dp"
                app:dividerThickness="4dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <NumberPicker
                android:id="@+id/numberPicker_height"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:gravity="center"
                android:theme="@style/NumberPickerTheme" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_height"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="20dp"
                android:foregroundGravity="center"
                app:dividerColor="@color/text_color"
                app:dividerInsetEnd="16dp"
                app:dividerInsetStart="16dp"
                app:dividerThickness="4dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp">

            <NumberPicker
                android:id="@+id/numberPicker_gender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:theme="@style/NumberPickerTheme" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_gender"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="20dp"
                android:foregroundGravity="center"
                app:dividerColor="@color/text_color"
                app:dividerInsetEnd="16dp"
                app:dividerInsetStart="16dp"
                app:dividerThickness="4dp" />
        </FrameLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_corner_button_gradient"
        android:fontFamily="@font/raleway"
        android:text="@string/calculate_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberpickers" />


</androidx.appcompat.widget.LinearLayoutCompat>